hover button coloring fixed and axe rules obided

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         P E R F U M E 
       </p>
       
-      <p class="title accent">
+      <h1 class="title accent">
         Gabrielle Essence Eau De Parfum
-      </p>
+      </h1>
       
       <p class="description grey ">
         A floral, solar and voluptuous interpretation composed by Olivier Polge, 
@@ -45,7 +45,7 @@
 
 
         <button class="button">
-          <img src="./images/icon-cart.svg">
+          <img src="./images/icon-cart.svg" alt="icon">
           Add to Cart
         </button>   
     </div>
